--- a/E_vacina/app/src/main/res/layout/activity_homepage.xml
+++ b/E_vacina/app/src/main/res/layout/activity_homepage.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.ActivityHomepage">
+    tools:context=".ui.visual.activity.ActivityHomepage">
 
     <TextView
         android:id="@+id/textView5"
@@ -17,13 +17,5 @@
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="81dp"
-        android:layout_height="70dp"
-        app:srcCompat="@tools:sample/avatars"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="24dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
