--- a/E_vacina/app/src/main/res/layout/activity_cadastro.xml
+++ b/E_vacina/app/src/main/res/layout/activity_cadastro.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.Activity_Cadastro">
+    tools:context=".ui.visual.activity.Activity_Cadastro">
 
     <ImageView
         android:id="@+id/activity_login_logo2"
@@ -21,90 +21,78 @@
         android:id="@+id/activity_login_texto_evacina3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="132dp"
-        android:layout_marginTop="176dp"
+        android:layout_marginStart="116dp"
+        android:layout_marginTop="25dp"
         android:text="CADASTRO"
         android:textColor="#F2994A"
         android:textSize="32sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/activity_login_logo2" />
 
     <EditText
         android:id="@+id/activity_cadastro_input_email"
-        android:layout_width="379dp"
+        android:layout_width="300dp"
         android:layout_height="41dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="344dp"
+        android:layout_marginTop="292dp"
+        android:layout_marginEnd="16dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="E-mail"
         android:textColor="#F2994A"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/activity_cadastro_input_password_confirmar"
-        android:layout_width="379dp"
+        android:layout_width="300dp"
         android:layout_height="41dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="536dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="16dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Confirme a senha"
         android:textColor="#F2994A"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/activity_cadastro_input_cpf"
-        android:layout_width="379dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="408dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="CPF"
-        android:textColor="#F2994A"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/activity_cadastro_input_password" />
 
     <Button
         android:id="@+id/activity_login_button_confirmar"
-        android:layout_width="382dp"
+        android:layout_width="300dp"
         android:layout_height="42dp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="168dp"
+        android:background="#F2994A"
         android:outlineSpotShadowColor="#F2994A"
         android:text="Confirmar cadastro"
-        android:background="#F2994A"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <EditText
-        android:id="@+id/activity_cadastro_input_nome"
-        android:layout_width="379dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="284dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Nome"
-        android:textColor="#F2994A"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/activity_cadastro_input_password_confirmar" />
 
     <EditText
         android:id="@+id/activity_cadastro_input_password"
-        android:layout_width="379dp"
+        android:layout_width="300dp"
         android:layout_height="41dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="472dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="16dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Senha"
         android:textColor="#F2994A"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/activity_cadastro_input_email" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
