--- a/App/app/src/main/res/layout/activity_cadastro_vacina.xml
+++ b/App/app/src/main/res/layout/activity_cadastro_vacina.xml
@@ -61,6 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:text="Enviar"
+        app:backgroundTint="#F2994A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lote_cadastro_vacinas" />
