--- a/App/app/src/main/res/layout/activity_homepage.xml
+++ b/App/app/src/main/res/layout/activity_homepage.xml
@@ -9,7 +9,7 @@
 
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/textAplicador"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
@@ -18,31 +18,38 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:text="Aplicador"
+        android:textColor="#F2994A"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView6"
+        app:layout_constraintStart_toEndOf="@+id/textLote"
         app:layout_constraintTop_toBottomOf="@+id/home_activity_teste" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/textLote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="50dp"
         android:text="Lote"
+        android:textColor="#F2994A"
         android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintStart_toEndOf="@+id/textData"
         app:layout_constraintTop_toBottomOf="@+id/home_activity_teste" />
 
     <Button
         android:id="@+id/button_logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Logout"
+        android:layout_marginBottom="17dp"
+        android:text="Sair"
+        app:backgroundTint="#F2994A"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.958"
+        app:layout_constraintStart_toEndOf="@+id/button_PDF"
+        app:layout_constraintTop_toBottomOf="@+id/acitiviy_list_view_aplicador"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/home_activity_teste"
@@ -54,6 +61,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:text="Usuarios"
+        android:textColor="#F2994A"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,33 +77,36 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:text="Bem-vindos"
+        android:textColor="#F2994A"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textVacina"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="50dp"
         android:text="Vacina"
+        android:textColor="#F2994A"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/home_activity_teste" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="50dp"
         android:text="Data"
+        android:textColor="#F2994A"
         android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintStart_toEndOf="@+id/textVacina"
         app:layout_constraintTop_toBottomOf="@+id/home_activity_teste" />
 
     <ListView
@@ -106,7 +117,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toBottomOf="@+id/textAplicador" />
 
     <ListView
         android:id="@+id/acitiviy_list_view_lote"
@@ -116,7 +127,7 @@
         android:layout_marginEnd="25dp"
         android:layout_marginRight="25dp"
         app:layout_constraintEnd_toStartOf="@+id/acitiviy_list_view_aplicador"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/textLote" />
 
     <ListView
         android:id="@+id/acitiviy_list_view_data"
@@ -126,7 +137,7 @@
         android:layout_marginEnd="25dp"
         android:layout_marginRight="25dp"
         app:layout_constraintEnd_toStartOf="@+id/acitiviy_list_view_lote"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/textData" />
 
     <ListView
         android:id="@+id/acitiviy_list_view_vacina"
@@ -136,7 +147,21 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="24dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/textVacina" />
+
+    <Button
+        android:id="@+id/button_PDF"
+        android:layout_width="90dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="16dp"
+        android:text="PDF"
+        app:backgroundTint="#F2994A"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/acitiviy_list_view_vacina"
+        app:layout_constraintVertical_bias="1.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
