--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.acitivity.MainActivity">
+
     <ImageView
         android:id="@+id/activity_login_logo"
         android:layout_width="154dp"
         android:layout_height="132dp"
         android:layout_marginStart="128dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="16dp"
         android:contentDescription="TODO"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,24 +22,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="132dp"
-        android:layout_marginTop="176dp"
         android:text="E-VACINA"
         android:textColor="#F2994A"
         android:textSize="32sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/activity_login_logo" />
 
     <TextView
         android:id="@+id/activity_login_texto_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="180dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="300dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:layout_marginBottom="5dp"
         android:text="E-mail"
         android:textColor="#F2994A"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/activity_login_input_email"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -46,11 +50,15 @@
         android:id="@+id/activity_login_input_email"
         android:layout_width="300dp"
         android:layout_height="40dp"
-        android:layout_marginStart="56dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="332dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:ems="10"
         android:inputType="textEmailAddress"
         android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -68,12 +76,16 @@
         android:id="@+id/activity_login_input_password"
         android:layout_width="300dp"
         android:layout_height="40dp"
-        android:layout_marginStart="56dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="416dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:ems="10"
         android:inputType="textPassword"
         android:password="true"
         android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -110,10 +122,10 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="480dp"
         android:layout_marginEnd="16dp"
-        android:background="#F2994A"
         android:text="Entrar"
         android:textColor="@color/white"
         android:textColorHint="#F2994A"
+        app:backgroundTint="#F2994A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
@@ -126,9 +138,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="536dp"
         android:layout_marginEnd="16dp"
-        android:background="#F2994A"
         android:text="Cadastrar"
         android:textColor="@color/white"
+        app:backgroundTint="#F2994A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
@@ -139,8 +151,9 @@
         android:layout_width="300dp"
         android:layout_height="42dp"
 
+        android:background="#F2994A"
         android:indeterminate="true"
-        android:indeterminateTint="@color/white"
+        android:indeterminateTint="#FF5722"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/activity_login_texto_email"
         app:layout_constraintEnd_toEndOf="parent"
@@ -165,7 +178,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Recuperar senha"
-        app:backgroundTint="#FF5722"
+        app:backgroundTint="#F2994A"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.509"
@@ -179,6 +192,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Sou enfermeiro"
+        app:backgroundTint="#F2994A"
         app:layout_constraintEnd_toEndOf="@+id/edit_recuperar_senha"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/edit_recuperar_senha"
