--- a/App/app/src/main/res/layout/activity_informacoes_pessoais_edicao.xml
+++ b/App/app/src/main/res/layout/activity_informacoes_pessoais_edicao.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.acitivity.Acitivity_InformacoesPessoais">
+    tools:context=".ui.acitivity.ActivityInformacoesPessoiasEdicao">
 
     <TextView
         android:id="@+id/textView"
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/Informacoes_Pessoais_input_nome"
+        android:id="@+id/Activit_informacoes_pessoais_edicao_input_nome"
         android:layout_width="365dp"
         android:layout_height="46dp"
         android:layout_marginStart="16dp"
@@ -37,12 +37,12 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
-        android:id="@+id/informacoes_Pessoais_input_sobreNome"
+        android:id="@+id/Activity_informacoes_pessoais_edicao_input_sobrenome"
         android:layout_width="365dp"
         android:layout_height="46dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:ems="10"
@@ -52,46 +52,24 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Informacoes_Pessoais_input_nome" />
+        app:layout_constraintTop_toBottomOf="@+id/Activit_informacoes_pessoais_edicao_input_nome" />
 
     <EditText
-        android:id="@+id/informacoes_Pessoais_input_CPF"
+        android:id="@+id/Activity_informacoes_pessoais_edicao_input_Endereco"
         android:layout_width="365dp"
         android:layout_height="46dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:ems="10"
-        android:hint="CPF"
-        android:inputType="textPersonName"
-        android:textColor="#F2994A"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/informacoes_Pessoais_input_data_aniversario" />
-
-    <EditText
-        android:id="@+id/informacoes_Pessoais_input_Endereco"
-        android:layout_width="365dp"
-        android:layout_height="46dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="Endereço"
         android:inputType="textPersonName"
         android:textColor="#F2994A"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/informacoes_Pessoais_input_CPF" />
+        app:layout_constraintEnd_toEndOf="@+id/Activity_informacoes_pessoais_edicao_input_CPF"
+        app:layout_constraintStart_toStartOf="@+id/Activity_informacoes_pessoais_edicao_input_CPF"
+        app:layout_constraintTop_toBottomOf="@+id/Activity_informacoes_pessoais_edicao_input_CPF" />
 
     <Button
-        android:id="@+id/informacoes_button_salva"
+        android:id="@+id/Activity_informacoes_pessoais_edicao_button_salva"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -103,15 +81,15 @@
         app:backgroundTint="#F2994A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/informacoes_Pessoais_input_Endereco" />
+        app:layout_constraintTop_toBottomOf="@+id/Activity_informacoes_pessoais_edicao_input_Endereco" />
 
     <EditText
-        android:id="@+id/informacoes_Pessoais_input_data_aniversario"
+        android:id="@+id/Activity_informacoes_pessoais_edicao_input_data_aniversario"
         android:layout_width="365dp"
         android:layout_height="46dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:ems="10"
@@ -120,6 +98,19 @@
         android:textColor="#F2994A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/informacoes_Pessoais_input_sobreNome" />
+        app:layout_constraintTop_toBottomOf="@+id/Activity_informacoes_pessoais_edicao_input_sobrenome" />
+
+    <EditText
+        android:id="@+id/Activity_informacoes_pessoais_edicao_input_CPF"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:ems="10"
+        android:hint="CPF"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="@+id/Activity_informacoes_pessoais_edicao_input_data_aniversario"
+        app:layout_constraintStart_toStartOf="@+id/Activity_informacoes_pessoais_edicao_input_data_aniversario"
+        app:layout_constraintTop_toBottomOf="@+id/Activity_informacoes_pessoais_edicao_input_data_aniversario" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
